cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_nvidia_arm64_efa.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: nvidia_arm64_efa
---
[
    "u-p6e-gb200x36",
    "u-p6e-gb200x72",
]
