cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: nvidia_x86_64
---
{
    "g4dn.12xlarge": InstanceInfo {
        instance_type: "g4dn.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.16xlarge": InstanceInfo {
        instance_type: "g4dn.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.2xlarge": InstanceInfo {
        instance_type: "g4dn.2xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.4xlarge": InstanceInfo {
        instance_type: "g4dn.4xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.8xlarge": InstanceInfo {
        instance_type: "g4dn.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g4dn.xlarge": InstanceInfo {
        instance_type: "g4dn.xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.12xlarge": InstanceInfo {
        instance_type: "g5.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.16xlarge": InstanceInfo {
        instance_type: "g5.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.24xlarge": InstanceInfo {
        instance_type: "g5.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.2xlarge": InstanceInfo {
        instance_type: "g5.2xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.48xlarge": InstanceInfo {
        instance_type: "g5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.4xlarge": InstanceInfo {
        instance_type: "g5.4xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.8xlarge": InstanceInfo {
        instance_type: "g5.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g5.xlarge": InstanceInfo {
        instance_type: "g5.xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.12xlarge": InstanceInfo {
        instance_type: "g6.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.16xlarge": InstanceInfo {
        instance_type: "g6.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.24xlarge": InstanceInfo {
        instance_type: "g6.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.2xlarge": InstanceInfo {
        instance_type: "g6.2xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.48xlarge": InstanceInfo {
        instance_type: "g6.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.4xlarge": InstanceInfo {
        instance_type: "g6.4xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.8xlarge": InstanceInfo {
        instance_type: "g6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6.xlarge": InstanceInfo {
        instance_type: "g6.xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.12xlarge": InstanceInfo {
        instance_type: "g6e.12xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.16xlarge": InstanceInfo {
        instance_type: "g6e.16xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.24xlarge": InstanceInfo {
        instance_type: "g6e.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.2xlarge": InstanceInfo {
        instance_type: "g6e.2xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.48xlarge": InstanceInfo {
        instance_type: "g6e.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.4xlarge": InstanceInfo {
        instance_type: "g6e.4xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.8xlarge": InstanceInfo {
        instance_type: "g6e.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "g6e.xlarge": InstanceInfo {
        instance_type: "g6e.xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "gr6.4xlarge": InstanceInfo {
        instance_type: "gr6.4xlarge",
        instance_storage_supported: true,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "gr6.8xlarge": InstanceInfo {
        instance_type: "gr6.8xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3.16xlarge": InstanceInfo {
        instance_type: "p3.16xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3.2xlarge": InstanceInfo {
        instance_type: "p3.2xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3.8xlarge": InstanceInfo {
        instance_type: "p3.8xlarge",
        instance_storage_supported: false,
        efa_supported: false,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p3dn.24xlarge": InstanceInfo {
        instance_type: "p3dn.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p4d.24xlarge": InstanceInfo {
        instance_type: "p4d.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "p4de.24xlarge": InstanceInfo {
        instance_type: "p4de.24xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: false,
        cpu_arch: "x86-64",
    },
    "p5.48xlarge": InstanceInfo {
        instance_type: "p5.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
    "p5e.48xlarge": InstanceInfo {
        instance_type: "p5e.48xlarge",
        instance_storage_supported: true,
        efa_supported: true,
        nvidia_gpu_supported: true,
        neuron_supported: false,
        cbr_supported: true,
        cpu_arch: "x86-64",
    },
}
