cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_nvidia_x86_64_ml_cbr.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: nvidia_x86_64_ml_cbr
---
[
    "p4d.24xlarge",
    "p4de.24xlarge",
    "p5.48xlarge",
    "p5e.48xlarge",
    "p5en.48xlarge",
    "p6-b200.48xlarge",
]
