cookiecluster/src/inputs/snapshots/cookiecluster__inputs__compute__tests__snapshot_x86_64_efa.snap
---
source: cookiecluster/src/inputs/compute.rs
expression: efa_x86_64
---
[
    "c5n.18xlarge",
    "c5n.9xlarge",
    "c6a.48xlarge",
    "c6i.32xlarge",
    "c6id.32xlarge",
    "c6in.32xlarge",
    "c7a.48xlarge",
    "c7i.48xlarge",
    "hpc6a.48xlarge",
    "hpc6id.32xlarge",
    "hpc7a.12xlarge",
    "hpc7a.24xlarge",
    "hpc7a.48xlarge",
    "hpc7a.96xlarge",
    "m5dn.24xlarge",
    "m5n.24xlarge",
    "m5zn.12xlarge",
    "m6a.48xlarge",
    "m6i.32xlarge",
    "m6id.32xlarge",
    "m6idn.32xlarge",
    "m6in.32xlarge",
    "m7a.48xlarge",
    "m7i.48xlarge",
    "r5dn.24xlarge",
    "r5n.24xlarge",
    "r6a.48xlarge",
    "r6i.32xlarge",
    "r6id.32xlarge",
    "r6idn.32xlarge",
    "r6in.32xlarge",
    "r7a.48xlarge",
    "r7i.48xlarge",
    "r7iz.32xlarge",
    "r8i.48xlarge",
    "r8i.96xlarge",
]
